add required methods and service

--- a/WebApp.Application/WebApp.Application.csproj
+++ b/WebApp.Application/WebApp.Application.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\WebApp.Domain\WebApp.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
