--- a/WebApp/appsettings.Development.json
+++ b/WebApp/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString": "Host=127.0.0.1;Port=5434;Database=postgres;Username=postgres;Password=Ans13042002;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
