--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,7 +1,5 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5435;Database=postgres;Username=postgres;Password=Ans13042002;"
-  },
+  "ConnectionString": "Host=127.0.0.1;Port=5434;Database=postgres;Username=postgres;Password=Ans13042002;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
