--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,20 @@
-﻿services:
+﻿networks:
+  deploy-guide-dev:
+    driver: bridge
+services:
   webapp:
+    environment:
+      - ConnectionString=Server=postgres;Port=5432;Database=postgres;Username=postgres;Password=Ans13042002
     image: webapp
     build:
       context: .
       dockerfile: WebApp/Dockerfile
-    ports: [ 8080:8080 ]
-    depends_on: [ postgres, pgbouncer ]
+    ports: [ 80:80 ]
+    networks:
+      - deploy-guide-dev
+    depends_on: [ postgres ]
   postgres:
-    image: postgres:16
+    image: postgres
     # set shared memory limit when using docker-compose
     shm_size: 256mb
     # or set shared memory limit when deploy via swarm stack
@@ -20,23 +27,8 @@
       POSTGRES_PASSWORD: Ans13042002
       POSTGRES_USER: postgres
       POSTGRES_DB: postgres
-      POSTGRES_HOST_AUTH_METHOD: md5
-      POSTGRES_INITDB_ARGS: --auth=md5
-    ports: [ 5432 ]
-    restart: on-failure
+    ports :
+      - "5434:5432" 
+    networks:
+      - deploy-guide-dev
     volumes: [ "./pg_data:/var/lib/postgresql/data/" ]
-  pgbouncer:
-    image: edoburu/pgbouncer:1.22.0-p0
-    environment:
-      DB_USER: postgres
-      DB_PASSWORD: Ans13042002
-      DB_HOST: postgres
-      DB_NAME: postgres
-      POOL_MODE: transaction
-      MAX_DB_CONNECTIONS: 100
-      DEFAULT_POOL_SIZE: 40
-      AUTH_TYPE: md5
-      ADMIN_USERS: postgres,dbuser
-    restart: on-failure
-    ports: [ 5435:5432 ]
-    depends_on: [ postgres ]
