--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,12 @@ services:
     build:
       context: .
       dockerfile: WebApp/Dockerfile
-    ports: [ 80:80 ]
+    ports: [ 8080:8080 ]
     networks:
       - deploy-guide-dev
     depends_on: [ postgres ]
   postgres:
-    image: postgres
+    image: postgres:16
     # set shared memory limit when using docker-compose
     shm_size: 256mb
     # or set shared memory limit when deploy via swarm stack
